# YU_ITEC6240_Final

./: .gitingore  Dockerfile  eda.ipynb  machineL_SVM.ipynb  machineL_catboost.ipynb  machineL_logistic_regression.ipynb  machineL_xg_boosting.ipynb  mashineL_random_forest.ipynb  merging_datasets.py  pyproject.toml
data/: combined.csv
helm/itec6240/: Chart.yaml  values.yaml
helm/itec6240/templates/: deployment.yaml  service.yaml
models/: model_run_utils.py  optuna_hpo.py  run_all_models.py  simple_catboost_clf.py  simple_logistic_regression.py  simple_net.py  simple_net_catboost.py  simple_net_knn.ipynb  simple_net_knn.py  simple_net_logistic.py  simple_net_rf.py  simple_net_svm.py  simple_net_xgboost.py  streamlit_dashboard.py  summarize_performance_metrics.py
models/outputs/simple_net/: mda_long.csv  shap_long.csv
models/outputs/simple_net_catboost/: mda_long.csv  shap_long.csv
models/outputs/simple_net_knn/: mda_long.csv  shap_long.csv
models/outputs/simple_net_logistic/: mda_long.csv  shap_long.csv
models/outputs/simple_net_rf/: mda_long.csv  shap_long.csv
models/outputs/simple_net_svm/: mda_long.csv  shap_long.csv
models/performance_metrics/: combined_performance_metrics.csv  performance_metrics_plots.html  simple_net.csv  simple_net_catboost.csv  simple_net_knn.csv  simple_net_logistic.csv  simple_net_rf.csv  simple_net_svm.csv
