[project]
name = "ml"
version = "0.1.0"
description = ""
authors = [
    {name = "SyntheticDemon",email = "pouriyatajmehrabi1381@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
